[package]
name = "luminal_rt"
version = "0.2.0"
edition = "2021"
authors = ["Luminal Team"]
description = "A DLL-boundary safe async runtime with tokio-compatible API"
license = "MIT"
repository = "https://github.com/tristanpoland/luminal"
keywords = ["async", "runtime", "dll", "executor"]
categories = ["asynchronous", "concurrency"]

[lib]
name = "luminal"
path = "src/lib.rs"

[dependencies]
async-std = "1.13.2"
crossbeam-queue = "0.3.12"
crossbeam-channel = "0.5.8"
crossbeam-deque = "=0.8.3"
crossbeam-utils = "0.8.21"
parking_lot = "0.12.3"
mio = "1.0.2"
slab = "0.4.11"
pin-project-lite = "0.2.16"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"
